Fixed some alignment issues.

--- a/src/agent-page/agent-page.css
+++ b/src/agent-page/agent-page.css
@@ -21,3 +21,8 @@
   .agent{
     padding-left: 16%;
   }
+  
+  .buttonfriend{
+    padding-top: 15px;
+    padding-left: 120px;
+  }
